Removed lines from test that weren't needed